Trying to figure out how to fix the contrasting

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -18,6 +18,22 @@
 }
 
 
+/* CSS for Navigational Stuff */
+
+ul
+{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li
+{
+  float: left;
+  margin: 5px;
+}
+
 /* Stuff for buttons */
 .button
 {
@@ -33,7 +49,7 @@
 }
 
 /* Footer Text */
-.footer-links, a, p, h3
+.footer-links
 {
   font-family: 'Times New Roman', Times, serif;
   color: black;
